# ccl_fizzbuzz

./: LICENSE  README.md  setup.cfg  setup.py
src/fizzbuzz/: __init__.py
tests/: test_buzz.py
