[metadata]
name = ccl_fizzbuzz
version = 0.0.1
author = Chris Leonard
author_email = chris.leonard@terminallabs.com
description = Simple package with fizzbuzz algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cleonard/ccl_fizzbuzz
project_urls =
    Bug Tracker = https://github.com/cleonard/ccl_fizzbuzz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
